:bug: fixing overflow on body third try

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+html,
+body {
+  overflow-x: hidden; }
+
 body {
   margin: 0;
   background-color: var(--backgroundColor);
